[tool.poetry]
name = "my-first-progect"
version = "0.1.0"
description = ""
authors = ["Nail"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.black]
#максимальная длина строки
line-length = 119

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.poetry.group.lint.dependencies]
requests = "^2.32.3"
flake8 = "^7.1.0"
mypy = "^1.11.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
